Closed
Bug 381538
Opened 15 years ago
Closed 15 years ago
"clean up" button remains greyed out after download completes
Categories
(Toolkit :: Downloads API, defect)
Toolkit
Downloads API
Tracking
()
VERIFIED
FIXED
People
(Reporter: aja+bugzilla, Assigned: sdwilsh)
References
Details
(Keywords: regression)
Attachments
(2 files, 3 obsolete files)
13.13 KB,
patch
|
Gavin
:
review+
|
Details | Diff | Splinter Review |
46.60 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070521 Minefield/3.0a5pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070521 Minefield/3.0a5pre Also found the following message in the error console. Error: Ci is not defined Source file: chrome://mozapps/content/downloads/downloads.js Line: 485 Reproducible: Always Steps to Reproduce: 1. Download a file 2. Once it's done, notice "clean up" button still greyed out 3. Actual Results: "clean up" button greyed out after download completes Expected Results: "clean up" button should not remain greyed out when download is complete This was my first download since the download manager change was checked in.
Reporter | ||
Updated•15 years ago
|
Version: unspecified → Trunk
Reporter | ||
Comment 1•15 years ago
|
||
Oops...missed another perhaps more relevant message in the error console: Error: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIObserverService.removeObserver] Source file: chrome://mozapps/content/downloads/downloads.js Line: 547
Comment 2•15 years ago
|
||
i can actually reproduce this. "clean up" remains disabled because the downloaded item does not had the focus.
Assignee | ||
Comment 3•15 years ago
|
||
(In reply to comment #1) > Error: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) > [nsIObserverService.removeObserver] > Source file: chrome://mozapps/content/downloads/downloads.js > Line: 547 Naw, that's just because of the first one - the observer never got registered.
Assignee | ||
Updated•15 years ago
|
OS: Windows XP → All
Hardware: PC → All
Assignee | ||
Comment 4•15 years ago
|
||
Basically, we were updating the database a bit too late. I'll make a test case for this bug tomorrow.
Assignee | ||
Comment 5•15 years ago
|
||
Includes test changes to actually test for this bug.
Attachment #265643 -
Attachment is obsolete: true
Attachment #265684 -
Flags: review?(gavin.sharp)
Attachment #265643 -
Flags: review?(gavin.sharp)
Assignee | ||
Comment 6•15 years ago
|
||
Comment on attachment 265684 [details] [diff] [review] v1.1 There are still a few minor issues here, I don't want to have you review this yet.
Attachment #265684 -
Flags: review?(gavin.sharp)
Assignee | ||
Comment 7•15 years ago
|
||
This also includes some stuff from Bug 381646 (just the test file). I had to refactor things a bit to actually do this right.
Attachment #265684 -
Attachment is obsolete: true
Attachment #265735 -
Flags: review?(gavin.sharp)
Assignee | ||
Comment 8•15 years ago
|
||
Addresses comments from irc.
Attachment #265735 -
Attachment is obsolete: true
Attachment #265735 -
Flags: review?(gavin.sharp)
Updated•15 years ago
|
Attachment #265852 -
Flags: review+
Assignee | ||
Comment 9•15 years ago
|
||
Checking in toolkit/components/downloads/src/nsDownloadManager.h; new revision: 1.24; previous revision: 1.23 Checking in toolkit/components/downloads/src/nsDownloadManager.cpp; new revision: 1.78; previous revision: 1.77 Checking in toolkit/mozapps/downloads/content/downloads.js; new revision: 1.57; previous revision: 1.56 Checking in toolkit/components/downloads/test/unit/test_download_manager.js; new revision: 1.8; previous revision: 1.7
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 10•15 years ago
|
||
WFM now. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070523 Minefield/3.0a5pre ID:2007052316 [cairo]
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Flags: in-testsuite+
Updated•14 years ago
|
Product: Firefox → Toolkit
Comment 11•10 years ago
|
||
Exactly the same behaviour in FF 19.0!!!! Download DialogBox always shows "clear list" button as greyed out in FF 19.0
Comment 12•10 years ago
|
||
Comment 13•10 years ago
|
||
(In reply to L.I.A.R. from comment #12) > Created attachment 718953 [details] > Screenshot of identical error in FF19 (10 years later)!!! 10 years later, is maybe cause that's another bug? please go to bug 842871.
You need to log in
before you can comment on or make changes to this bug.
Description
•