Bug 381538 - "clean up" button remains greyed out after download completes.  r=gavin.sharp